--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,17 +3,17 @@ spring:
     name: user-service
   profiles:
     default: dev
-  #cloud:
-  #  config:
-  #    enabled: false
-  #    uri: ${CONFIG_SERVER_URI:http://localhost:8888}
-  #    fail-fast: true
-  #    retry:
-  #      initial-interval: 1000
-  #      max-interval: 2000
-  #      max-attempts: 10
-  #config:
-  #  import: "configserver:"
+  cloud:
+    config:
+      enabled: false
+      uri: ${CONFIG_SERVER_URI:http://localhost:8888}
+      fail-fast: true
+      retry:
+        initial-interval: 1000
+        max-interval: 2000
+        max-attempts: 10
+  config:
+    import: "configserver:"
   datasource:
     url: jdbc:postgresql://localhost:5432/board_service
     username: postgres
@@ -23,5 +23,5 @@ spring:
       ddl-auto: create
 server:
   port:
-    8083
+    8082
 
