--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,27 +1,29 @@
 spring:
   application:
-    name: user-service
+    name: board-service
   profiles:
     default: dev
   cloud:
     config:
-      enabled: false
+      enabled: true
       uri: ${CONFIG_SERVER_URI:http://localhost:8888}
       fail-fast: true
       retry:
         initial-interval: 1000
         max-interval: 2000
         max-attempts: 10
+
   config:
     import: "configserver:"
-  datasource:
-    url: jdbc:postgresql://localhost:5432/board_service
-    username: postgres
-    password: 1337
-  jpa:
-    hibernate:
-      ddl-auto: create
-server:
-  port:
-    8082
+
+#  datasource:
+#    url: jdbc:postgresql://localhost:5432/board_service
+#    username: admin
+#    password: admin
+#  jpa:
+#    hibernate:
+#      ddl-auto: create
+#server:
+#  port:
+#    8082
 
